sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() {
^AlgCocktailSort1:2: error: expected class or object definition
def cocktailSort() {
^AlgCocktailSort1:5: error: expected class or object definition
def bubbleSort2() {
^