sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
}

def bubbleSort2() {
  var continuer:Boolean = true
  var length:Int = getNombreValeurs()
  while (continuer){
    continuer = false
    for (i <- 0 to (length - 2)){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        continuer = true
    }
    for (i <- (length - 2) to 0){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        continuer = true
      }
    }
  }
}